# python-basics

./: pyproject.toml
src/python_basics/: __init__.py
src/python_basics/algorithms/: 01_linear_search.py  02_binary_search.py  03_selection_sort.py  04_bubble_sort.py  05_recursion_fact.py  06_merge_sort.py
src/python_basics/basics/: 01_unary.py  02_binary.py  03_hexadecimal.py  04_ascii_codes.py  05_unicode.py  06_conditionals.py  07_loops.py  08_functions.py  09_exceptions.py  10_write_csv_file.py  11_python_oop.py  12_libraries.py  mymath.py  phonebook.csv
src/python_basics/data_structure/: 01_stack.py  02_queue.py  03_resize_array.py  04_linked_list_single.py  05_dictionaries_hashtables.py  06_list_tupple_set_string.py
src/python_basics/problems/: 01_fibonacci_recursive.py  02_fibonacci_iterative.py  03_is_palindrome.py  04_armstrong_number.py  05_anagram_checker.py  06_pascal_triangle.py  07_inverted_pyramid_pattern.py  08_diamond_pattern copy.py  09_hollow_diamond_pattern.py  11_butterfly_pattern.py  12_hourglass_pattern.py
