[project]
name = "python-basics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "fistasolutions", email = "176579540+fistasolutions@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "mymath>=1.0.1",
    "requests>=2.32.5",
]

[project.scripts]
python-basics = "python_basics:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
